# TMC_Studio

./: .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_NEXT_STEPS.md  README.md  commitlint.config.js  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.json
.clinerules/: feature_spec_maintenance.md  project_rules_custom_instruction.md
.github/: copilot-instructions.md
apps/web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
brand/: README.md  TMC_Studio_Brand_Book.html  _pitch-def.svg.frag  brand-guide.html
docs/: AGENTS_CHECKLIST.md  AGENT_ORCHESTRATION.md  ANALYTICS_AND_QA_GATE.md  ANIMATION_MODULE_CODE_REVIEW_RESULTS.md  ANIMATION_MODULE_UX_POLISH_COMPLETE.md  ARCHITECTURE_DIAGNOSIS_6_ISSUES.md  ARCHITECTURE_OVERVIEW.md  AUDYT_KOMPLEKSOWY_2026-06-18.md  AUTH_FLOW.md  AUTOSAVE_AND_PROJECT_ORGANIZATION.md  BETA_TESTING_PLAN.md  BRAND_ASSETS.md  CANVAS_STABILIZATION_COMPLETE.md  CODE_REVIEW_STATUS_2026_02_19.md  COMMANDS_MAP.md  CURRENT_SPRINT_PLAN.md  DATA_MODEL.md  DB_CONVENTIONS.md  DEPLOYMENT_CHECKLIST.md  DESIGN_SYSTEM.md  DESKTOP_RELEASE_CHECKLIST.md  DESKTOP_TAURI_PLAN.md  DOCUMENTATION_CLEANUP_PLAN.md  DRAG_DROP_PATTERN.md  ENTITLEMENTS.md  EQUIPMENT_SYSTEM_PLAN.md  EU_COMPLIANCE_CHECKLIST.md  FEATURE_SPEC.md  FEATURE_STATUS.md  GOALS_AND_HOTFIXES_PLAN.md  H3_CONFIRM_MODAL_CHECKLIST.md  HELP_SYSTEM_OVERHAUL_PLAN.md  IMPLEMENTATION_CONTRACTS.md  IMPLEMENTATION_PLAN_SPRINTS.md  INDEX.md  (+49 more)
(+411 files in other folders)
