[package]
name = "tmc-studio"
version = "0.6.0"
description = "TMC Studio Desktop"
authors = ["Tactics Made Clear"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tmc_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
